# aie4ml

./: README.md  pyproject.toml
docs/: README_PL_integration.md  support.md
src/aie4ml/: aie_backend.py  aie_types.py  kernel_registry.py  model.py  pipeline.py  quant_utils.py  report.py  serialization.py  simulation.py  system_plan.py  writer.py
src/aie4ml/frontends/hls4ml/: backend.py  lower.py  utils.py
src/aie4ml/frontends/onnx/: __init__.py  context.py  importer.py  lower.py  quantize.py  registry.py  shapes.py  utils.py
src/aie4ml/frontends/onnx/handlers/: __init__.py  activation.py  elementwise.py  (+3 more)
src/aie4ml/ir/: __init__.py  context.py  graph.py
src/aie4ml/op_impls/: __init__.py  base.py  builtins.py  common_types.py  family_registry.py  registry.py
src/aie4ml/op_impls/families/: __init__.py
src/aie4ml/op_impls/utils/: __init__.py  io.py  math.py  precision.py  tensor_view.py  tiling.py
src/aie4ml/passes/: __init__.py  boundary_sharding.py  compact_buffer_rank.py  fold_apply_alpha.py  fold_bias.py  fold_scale.py  fold_transpose.py  fold_views.py  force_float_mode.py  fuse_activation.py  lower.py  memory_plan.py  memtile_legalize.py  pack.py  placement.py  quant.py  resolve.py  resolve_registry.py  transport_classify.py  transport_legality.py  utils.py
src/aie4ml/templates/firmware/: Makefile.jinja  app.cpp.jinja  artifacts_1d.h.jinja  artifacts_2d.h.jinja  graph_plan.h.jinja  parameters.h.jinja  system.cfg.jinja  top_graph.h.jinja
tests/: test_float_sim.py  test_hls4ml_dense.py
tutorials/: tutorial_1.ipynb  tutorial_2.ipynb  tutorial_3.py
(+37 files in other folders)
